down arrow symbol is missing in <select size=""> of HTML pages
Categories
(Core :: Layout: Form Controls, defect, P3)
Tracking
()
People
(Reporter: vamsee.aditya3, Assigned: heycam)
References
(Regression, )
Details
(Keywords: regression)
Attachments
(2 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:77.0) Gecko/20100101 Firefox/77.0
Steps to reproduce:
create a select box like,
<html>
<body>
<select id="t" size="">
<option>1</option>
<option>2</option>
<option>3</option>
</select>
</body>
</html>
Actual results:
If the attribute size is empty, then arrow mark is missed. If the size is 1 or more then the arrow mark is displayed.
Expected results:
The arrow mark should be displayed if size is empty considering "1" as default.
Comment 1•5 years ago
|
||
<select size=""> does not show dropdown arrow
Regression window:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=1ce9b4193d624d5d4ed4bceecfbeb1514f818848&tochange=e61c4485494ec4823da22217f665d73858c57e35
Suspect:
981938848b0040e47de5289041bbcf27561baa4f Mats Palmgren — Bug 1246836 part 2 - Reftest. r=me
36be4f8806ce195b201299beb1af66200294e381 Mats Palmgren — Bug 1246836 part 1 - Render the <select> dropdown button for -moz-appearance:menulist only.
Updated•5 years ago
|
Comment 2•5 years ago
|
||
Looks like we've been living with this regression for a while. Marking as S3.
| Assignee | ||
Comment 3•5 years ago
|
||
The rules we have in the UA sheets to match <select> elements that are drop downs don't match what the HTML spec says in terms of parsing of the size="" attribute, which is done using the rules for parsing non-negative integers. For example, we should be skipping white space, ignoring junk at the end of the number, etc.
The only way we can do exactly the right thing here is to add a new pseudo-class like :-moz-drop-down or :-moz-list-box, which parses size="" properly.
| Assignee | ||
Comment 4•5 years ago
|
||
We already do something similar with :-moz-table-border-nonzero so it's not a big deal.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 5•5 years ago
|
||
| Assignee | ||
Comment 6•5 years ago
|
||
Instead add a pseudo-class that does the expected size="" attribute parsing.
Removing the Gtk-specific rule setting the text color since it doesn't
seem to have any effect currently.
Comment 8•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 9•5 years ago
|
||
Reproduced the issue using Firefox 79.0a1 (20200603214922) on Windows 10x64.
The issue is verified fixed with Firefox 80.b1 (20200728204253) on Windows 10x64, macOS 10.12 and Ubuntu 18.04.
Description
•