Bug 1643246 - Don't use attribute selectors for determining if a select is a drop down or a list box. r=emilio

Instead add a pseudo-class that does the expected size="" attribute parsing.

Removing the Gtk-specific rule setting the text color since it doesn't
seem to have any effect currently.

Differential Revision: https://phabricator.services.mozilla.com/D83448